<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ASSASSINS</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_settings">Settings</string>
    <string name="title_activity_facebook">Facebook</string>
    <string name="facebook_app_id">1074207239260526</string>
    
    <string name="pref_description_self_notifications">Send notifications when you are attacked</string>
    <string name="pref_title_self_notifications">Self</string>
    <string name="pref_description_game_notifications">Send notifications when players are eliminated</string>
    <string name="pref_title_game_notifications">Game</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="save_text">Save Settings</string>
    
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer closed</string>

    <string name="not_logged_in">You are not currently logged in.</string>
    <string name="login">Login with Facebook</string>
    <string name="title_activity_target">My Target</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_leader_board">Leaderboard</string>
    <string name="title_activity_stats">Stats</string>

    <string name="leave_game">Leave game?</string>
    <string name="delete_game">Delete game?</string>
    <string name="join_game">Join game?</string>
    <string name="title_activity_create_game">Create Game</string>
    <string name="start_game">Start Game with Current Users?</string>

    <string name="game_title">Game Title:</string>
    <string name="game_duration">Game Duration:</string>
    <string name="block_duration">Block Duration:</string>
    <string name="attack_radius">Attack Radius:</string>
    <string name="add_friends">Add Friends</string>
    <string name="start">Start</string>
    <string name="title_activity_eliminate_leaderboard">EliminateLeaderboard</string>
    <string name="title_activity_remaining_leaderboard">RemainingLeaderboard</string>

    <string name="days">Days</string>
    <string name="seconds">Seconds</string>
    <string name="yards">Yards</string>
    <string name="title_activity_facebook_hash_key">FacebookHashKey</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="UserName">User Name</string>
    <string name="Login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="title_activity_no_target">NoTarget</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="title_dialog_add_friend">Add New Friend</string>
    <string name="title_activity_add_friend">addFriend</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_friends">AddFriendsActivity</string>

</resources>
