<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/content_frame" xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.jhua.assassin.CreateGameActivity"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/game_title"
                    android:id="@+id/textView3" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/game_title"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/game_duration"
                android:id="@+id/textView4" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/game_duration_spinner"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/block_duration"
                android:id="@+id/textView5" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/block_duration_spinner"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/attack_radius"
                android:id="@+id/textView6" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/attack_radius_spinner"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:paddingBottom="18dp"
                    android:text="@string/add_friends"
                    android:textSize="26sp"
                    android:id="@+id/add_friends"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:background="@drawable/orange_button_states"
                    android:layout_weight=".5" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:paddingBottom="18dp"
                    android:text="@string/start"
                    android:textSize="26sp"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:id="@+id/start"
                    android:background="@drawable/green_button_states"
                    android:layout_weight=".5" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@color/gray"
        android:dividerHeight="2dp"
        android:background="@color/white" />

</android.support.v4.widget.DrawerLayout>
