<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jhua.assassin.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Assassins Login"
        android:id="@+id/textView7"
        android:layout_above="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:textSize="40dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/login_user"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:hint="@string/UserName"
        android:layout_above="@+id/login_password"
        android:gravity="center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/login_password"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Login"
        android:id="@+id/login_button"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="60dp"
        android:background="@drawable/green_button_states"
        android:textColor="#ffffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/sign_up_button"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:text="@string/signup"
        android:background="@drawable/orange_button_states"
        android:textColor="#ffffffff" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:src="@mipmap/ic_launcher"
        android:layout_above="@+id/textView7"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
